--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
 html {
-  background-color: green;
+  background-color: rgb(61, 201, 61);
   font-size: 20px;
 }
 
 ul {
-  background: red;
+  background: rgb(74, 89, 156);
   padding: 10px;
   border: 1px solid black;
 }
 
 li {
-  margin-left: 20px;
+  margin-left: 250px;
+}
+
+p {
+  background-color: brown;
+  font-size: 30px;
+}
+
+h1 {
+  background-color: chocolate;
+  font-size: 50px;
 }
