--- a/style.css
+++ b/style.css
@@ -1,24 +1,14 @@
 html {
-  background-color: rgb(61, 201, 61);
+  background-color: green;
   font-size: 20px;
 }
 
 ul {
-  background: rgb(74, 89, 156);
+  background: red;
   padding: 10px;
   border: 1px solid black;
 }
 
 li {
-  margin-left: 250px;
-}
-
-p {
-  background-color: brown;
-  font-size: 30px;
-}
-
-h1 {
-  background-color: chocolate;
-  font-size: 50px;
+  margin-left: 20px;
 }
